--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <li>
                     <a href="./velib.html">Vélib'</a>
                 </li>
+                <li>
+                    <a href="./meteo.html">Météo</a>
+                </li>
             </ul>
         </div>
     </body>
